# fobjects

./: .clang-format  .gitignore  README.md  default.nix  dev.py  generator.qml  go.mod  go.sum  main  main.go  requirements.txt
dev/: helpers.py  setup_helpers.py
runtime/: CMakeLists.txt  CMakeUserPresets.json  Runtime.cpp  Runtime.h  factory.go  object.go  package.go  project.go  runtime.swigcxx
runtime/cpp/: FactoryAbstract.h  ObjectAbstract.h  ProjectAbstract.h  helpers.h
runtime/qmlruntime/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
runtime/qmlruntime/include/qmlruntime/: QmlRuntime.h
runtime/qmlruntime/include/runtime/: Runtime.h
runtime/qmlruntime/src/: QmlRuntime.cpp  QmlRuntimeController.cpp  QmlRuntimeController.h  Runtime.cpp  RuntimeController.cpp  RuntimeController.h
runtime/qmlruntime/tests/: CMakeLists.txt
runtime/qmlruntime/tests/src/: test.qml  test_qmlruntime.cpp
runtime/qt/include/: BridgeSingleton.h
runtime/qt/src/: BridgeSingleton.cpp  BridgeSingleton.h  Object.cpp  Object.h  Project.cpp  Project.h
test/e2e/: test.qml
